# jobscout-ai

./: .gitignore  README.md  nixpacks.toml  package.json  pnpm-lock.yaml
apps/api/: .env.example  .gitignore  Dockerfile  Dockerfile.beat  Dockerfile.worker  README.md  install_windows_service.ps1  local_agent.bat  pyproject.toml  railway.toml  start_agent_chrome.bat
apps/api/app/: config.py  deps.py  main.py
apps/api/app/agent/: answer_resolver.py  browser.py  computer_use_filler.py  form_filler.py  local_runner.py  registry.py  screenshots.py
apps/api/app/agent/adapters/: greenhouse_filler.py  lever_filler.py  prefill_copilot.py
apps/api/app/db/: supabase_client.py
apps/api/app/routers/: admin.py  applications.py  health.py  profiles.py  resumes.py
apps/api/app/scout/: base.py  persist.py  registry.py
apps/api/app/scout/adapters/: greenhouse.py  lever.py
apps/api/app/scout/seed/: greenhouse_companies.py  lever_companies.py
apps/api/app/services/: calendar_export.py  email_matcher.py  google_gmail.py  notify.py
apps/api/app/services/ai/: cover_letter.py  email_classifier.py  interview_prep.py  job_scorer.py  profile_context.py  resume_tailor.py  resume_verifier.py
apps/api/app/services/documents/: cover_letter_builder.py  resume_builder.py
apps/api/app/templates/: resume.html
apps/api/app/worker/: celery_app.py
apps/api/app/worker/tasks/: apply.py  inbox.py  interviews.py  scoring.py  scout.py
apps/api/scripts/: import_job_by_url.py  test_greenhouse.py  test_greenhouse_filler.py  test_lever.py  test_tailor.py
apps/mobile/: app.json  eas.json  (+2 more)
(+111 files in other folders)
