[project]
name = "jobscout-api"
version = "0.1.0"
description = "FastAPI service for JobScout AI"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anthropic",
    "beautifulsoup4",
    "celery[redis]",
    "fastapi",
    "flower",
    "httpx",
    "pydantic-settings",
    "pypdf",
    "python-docx",
    "python-jose[cryptography]",
    "python-multipart",
    "redis",
    "supabase",
    "uvicorn[standard]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
