[project]
name = "jobscout-api"
version = "0.1.0"
description = "FastAPI service for JobScout AI"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anthropic",
    "beautifulsoup4",
    "celery[redis]",
    "cryptography>=48.0.0",
    "fastapi",
    "flower",
    "fpdf2",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.52.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx",
    "icalendar>=7.1.0",
    "jinja2",
    "playwright>=1.59.0",
    "playwright-stealth>=2.0.3",
    "pydantic-settings",
    "pypdf",
    "python-docx",
    "python-jose[cryptography]",
    "python-dotenv",
    "python-multipart",
    "redis",
    "supabase",
    "uvicorn[standard]",
    "weasyprint",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
